src/frenchbook.css
@import url('./styles/utilities.css');
@import url('./styles/symbols.css');
@import url('./styles/rhythms.css');
@import url('./styles/layout.css');

/* @import url('./styles/fonts.css'); */
/* @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Open+Sans+Condensed:wght@700&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Emoji:wght@400;700&family=Noto+Music&family=Noto+Sans+Symbols:wght@400;700&family=Open+Sans+Condensed:wght@700&display=swap');

@font-face {
  font-family: 'LJC';
  font-style: normal;
  font-weight: normal;
  src: url('/src/assets/lilyjazz-chord.otf') format('opentype');
}
@font-face {
  font-family: 'MuseJazz';
  font-style: normal;
  font-weight: normal;
  src: url('/src/assets/MuseJazz.otf') format('opentype');
}
@font-face {
  font-family: 'RhythmsFont';
  font-style: normal;
  font-weight: normal;
  src: url('/src/assets/Rhythms.otf') format('opentype');
}

@property --page-width {
  syntax: '<length>';
  initial-value: 210mm;
  inherits: true;
}

@property --page-height {
  syntax: '<length>';
  initial-value: 297mm;
  inherits: true;
}

@property --aspect-ratio {
  syntax: '<number>';
  initial-value: calc(210/297);
  inherits: true;
}

@media print {
  /* Ensure user agent does not need "print background colours" on in order
  for white outlines to print around chord names etc */
  body {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

@page {
  size: var(--page-width) var(--page-height);
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin: 0;
}

:root {
  --page-width: 210mm;
  --page-height: 297mm;
  --top-page-margin: 10mm;
  --bottom-page-margin: 10mm;
  --header-height: 16mm;
  --song-top-padding: calc(var(--y-unit) / 2);
}
:root[data-page-size='ipad'] {
  --header-height: 1.5rem;
  --top-page-margin: 2mm;
  --bottom-page-margin: 2mm;
  --page-height: calc(297mm - 20mm - 16mm - calc(var(--y-unit)/2) + var(--top-page-margin) + var(--bottom-page-margin));
  --song-top-padding: 0;
  --page-width: calc(var(--page-height) * 3 / 4);
  --remaining-margin-space: calc(var(--page-width) - var(--page-columns) * var(--root-bar-width) - var(--header-height));
  --x-page-margin: calc(var(--remaining-margin-space) / 2);
  --left-page-margin: calc(var(--remaining-margin-space) / 2);
  --right-page-margin: calc(var(--remaining-margin-space) / 2 + var(--header-height));
  
}

:root[data-page-size='ipad'] header {
  position: absolute;
  left: 100%;
  transform-origin: top left;
  transform: rotate(90deg);
}
  
:root[data-page-size='ipad'] .title-bar {
  width: calc(var(--page-height) - 0.5cm);
  position: relative;
  left: calc(-1 * var(--top-page-margin));
  margin-inline: 0.25cm;
}
:root[data-page-size='ipad'] .top-content {
  display: none;
}
:root[data-page-size='ipad'] .number {
  font-size: 1.75rem; 
  line-height: 1.5rem;
}
:root[data-page-size='ipad'] .title-bar .title {
  font-size: 1.5rem;
  line-height: 1;
}


:root {
  --root-bar-width: 22mm;
  --page-columns: 8;
  --x-page-margin: calc(
    calc(var(--page-width) - var(--page-columns) * var(--root-bar-width))
    / 2
  );
  --left-page-margin: var(--x-page-margin);
  --right-page-margin: var(--x-page-margin);

  --root-bar-height: 20mm;

  --font-size: 4.25mm;
  --bar-width: var(--root-bar-width);
  --bar-height: var(--root-bar-height);
  --x-unit: calc(var(--bar-width) / 2);
  --y-unit: calc(var(--bar-height) / 2);

  --row-gap: var(--y-unit);
  --col-gap: var(--x-unit);

  --gridline-color: black;
  --stop-color: #CCC;
  --stroke-width: 0.25mm;
  --thick-stroke-width: 0.75mm;
  --border-stroke-gap-width: 0.25mm;
  --rhythm-font-size: 5mm;
  --text-outline-color: white;
  --serif-font: 'EB Garamond', 'Noto Sans Symbols', 'Noto Emoji';
  --annotation-font: 'EB Garamond', 'Noto Sans Symbols', 'Noto Emoji';
  --annotation-script-font: 'EB Garamond', 'Noto Music', 'Noto Sans Symbols', 'Noto Emoji';
  
  --root-large-chord-size: 8.6mm;
  --root-small-chord-size: calc(var(--root-large-chord-size) / 1.625);
}





.page {
  width: var(--page-width);
  min-height: var(--page-height);
  padding: var(--top-page-margin) var(--x-page-margin) 0;
  overflow: hidden;
  font-family: var(--serif-font);
  position: relative;
}

.song {
  display: flex;
  flex-direction: column;
  align-items: start;
  position: relative;
  margin-top: var(--song-top-padding);
}


hr {
  border-width: 0 0 var(--stroke-width);
  border-style: solid;
}

